--- a/index.html
+++ b/index.html
@@ -1,94 +1,91 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="scss/styles.css" />
-        <script src="js/jquery-3.6.0.js" type="text/javascript"></script>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="container__images">
-                <div class="container__images__top">
-                    <img
-                        src="assets/SliderImages/top/slider-image-1.jpg"
-                        alt="first"
-                        id="first"
-                    />
-                    <img
-                        src="assets/SliderImages/top/slider-image-2.jpg"
-                        alt="second"
-                        id="second"
-                    />
-                    <img
-                        src="assets/SliderImages/top/slider-image-3.jpg"
-                        alt="third"
-                        id="third"
-                    />
-                    <img
-                        src="assets/SliderImages/top/slider-image-4.jpg"
-                        alt="fourth"
-                        id="fourth"
-                    />
-                    <img
-                        src="assets/SliderImages/top/slider-image-5.jpg"
-                        alt="fifth"
-                        id="fifth"
-                    />
-                </div>
-                <div class="container__images__bottom">
-                    <div class="container__images__bottom__imagesContainer">
-                        <img
-                            src="assets/SliderImages/bottom/slider-image-6.jpg"
-                            alt="sixth"
-                        />
-                        <img
-                            src="assets/SliderImages/bottom/slider-image-7.jpg"
-                            alt="seventh"
-                        />
-                        <img
-                            src="assets/SliderImages/bottom/slider-image-8.jpg"
-                            alt="eighth"
-                        />
-                        <img
-                            src="assets/SliderImages/bottom/slider-image-9.jpg"
-                            alt="ninth"
-                        />
-                    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="scss/main.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <header class="header"></header>
 
-                    <div class="container__images__bottom__buttonContainer">
-                        <div
-                            class="container__images__bottom__buttonContainer__left"
-                        >
-                            <img
-                                src="assets/SliderArrows/arrow-blue-left.png"
-                                alt="left"
-                            />
-                        </div>
-                        <div
-                            class="container__images__bottom__buttonContainer__right"
-                        >
-                            <img
-                                src="assets/SliderArrows/arrow-blue-right.png"
-                                alt="right"
-                            />
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container__text">
-                <div class="container__text__title">
-                    Lorem ipsum dolor sit amet consectetuer adipiscing elit
-                </div>
-                <div class="container__text__body">
-                    Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                    ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-                    consequat. Duis autem vel eum iriure dolor in hendrerit in
-                    vulputate velit esse molestie consequat.
-                </div>
-            </div>
+    <div class="container">
+      <div class="container__images">
+        <div class="container__images__top">
+          <img src="assets/SliderImages/top/slider-image-1.jpg" alt="first" />
+          <img src="assets/SliderImages/top/slider-image-2.jpg" alt="second" />
+          <img src="assets/SliderImages/top/slider-image-3.jpg" alt="third" />
+          <img src="assets/SliderImages/top/slider-image-4.jpg" alt="fourth" />
+          <img src="assets/SliderImages/top/slider-image-5.jpg" alt="fifth" />
+          <img src="assets/SliderImages/top/slider-image-3.jpg" alt="third" />
+          <img src="assets/SliderImages/top/slider-image-2.jpg" alt="second" />
         </div>
-        <script src="js/script.js"></script>
-    </body>
+        <div class="container__images__bottom">
+          <div class="container__images__bottom__imagesContainer">
+            <img
+              src="assets/SliderImages/bottom/slider-image-6.jpg"
+              alt="sixth"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-7.jpg"
+              alt="seventh"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-9.jpg"
+              alt="ninth"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-8.jpg"
+              alt="eighth"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-6.jpg"
+              alt="sixth"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-7.jpg"
+              alt="seventh"
+            />
+            <img
+              src="assets/SliderImages/bottom/slider-image-9.jpg"
+              alt="ninth"
+            />
+          </div>
+
+          <div class="container__images__bottom__buttonContainer">
+            <button
+              class="container__images__bottom__buttonContainer__left"
+              type="button"
+            ></button>
+            <button
+              class="container__images__bottom__buttonContainer__right"
+              type="button"
+            ></button>
+          </div>
+        </div>
+      </div>
+      <div class="container__text">
+        <div class="container__text__title">
+          Lorem ipsum dolor sit amet consectetuer adipiscing elit
+        </div>
+        <div class="container__text__body">
+          Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
+          suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem
+          vel eum iriure dolor in hendrerit in vulputate velit esse molestie
+          consequat.
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer"></footer>
+
+    <script src="js/jquery-3.6.0.js" type="text/javascript" defer></script>
+    <script src="js/script.js" defer></script>
+  </body>
 </html>
