--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="scss/main.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="scss/main.css" />
     <title>Document</title>
   </head>
   <body>
@@ -86,6 +86,6 @@
     <footer class="footer"></footer>
 
     <script src="js/jquery-3.6.0.js" type="text/javascript" defer></script>
-    <script src="js/script.js" defer></script>
+    <script src="js/script.min.js" defer></script>
   </body>
 </html>
